--- a/css/main.css
+++ b/css/main.css
@@ -9,7 +9,7 @@
    }
 div {
   border: red;
-  font-family: "Myriad Pro";
+  font-family: "MyriadPro";
   font-size: 16px;
   color: red;
 }
@@ -21,7 +21,8 @@ body {
     width: 430px;
     border: 1px solid red;
     margin-left: 60px;
-/*    margin-top: 76px;*/
+/*    margin-top: 76px;
+padding-right: 30px;*/
 }
 .namehere {
   /*width: 270px;
@@ -133,6 +134,7 @@ color: red;
     font-weight: normal;
     /* letter-spacing: 0.20px; */
     line-height: 18.7px;
+    margin-right: 15px;
 /*  Regular  transform: scaleX (1.2);
 
    padding-right: 5px;*/
