--- a/css/main.css
+++ b/css/main.css
@@ -35,21 +35,23 @@ padding-right: 30px;*/
   line-height: normal;
   letter-spacing: 0.01em;
   text-align: center;
- /*  font-variant-ligatures: common-ligatures discretionary-ligatures historical-ligatures;*/
+  margin-top: 30px;
+  line-height: 52px;
 }
 .surname {
-  margin-left: auto;
+/*  margin-left: auto;
   margin-right: auto;
   width: 276px;
-  height: 42px;
+  height: 42px; */
   font-family: Myriad Pro;/**/
   font-size: 61.5px;
   font-weight: 900;
   /*font-style: normal;
   font-stretch: normal;
   line-height: normal;*/
-  letter-spacing: -0.030em;
-/*  text-align: left;*/
+  letter-spacing: -0.03em;
+  text-align: center;
+  margin-top: -10px;
 }
 .graphic-designer {
   /*width: 211px;
@@ -66,6 +68,7 @@ padding-right: 30px;*/
   /*text-align: left;
   color: #000000;*/
   transform: scaleX( 0.91);
+  margin-top: 5px;
 
 }
 .circle {
@@ -105,27 +108,26 @@ span.bld {
 }
 .hdr {
   font-size: 41px;
-  letter-spacing: -0.03px;
-  transform: scaleX( 0.96);
   font-weight: 900;
-/*    font-size: 16.667px;
-  font-family: "Myriad Pro";
-  color: rgb(61, 108, 176);
-  font-weight: bold;
-  line-height: 1.2;
-  text-align: left;
-  -moz-transform: matrix( 2.46941347123943,0,0,2.46907102918116,0,0);
-  -webkit-transform: matrix( 2.46941347123943,0,0,2.46907102918116,0,0);
-  -ms-transform: matrix( 2.46941347123943,0,0,2.46907102918116,0,0);
-    position: absolute;
-  left: 190.443px;
-  top: 597px;
-  z-index: 178;*/
+  margin-top: 72px;
+  margin-bottom: 5px;
+  line-height: 78px;
+  display: table;
+      width: inherit;
+}
+.hdr i {
+  margin-right: 3px;
+  font-size: 73px;
+  vertical-align: middle;
+  display: table-cell;
 }
 .hdr span {
-    text-decoration: line-through;/**/
+    font-family: Myriad Pro;
     font-weight: 900;
-    font-size: 55px;
+    font-size: 41x;
+    letter-spacing: -1px;
+    display: table-cell;
+    padding-left: 10px;
 }
 .txt {
 color: red;
@@ -142,6 +144,10 @@ color: red;
 .txt span {
     font-weight: 900;
     font-family: MyriadPro;
-    letter-spacing: 0.45px;
+  letter-spacing: 0.45px;
     line-height: initial;
+}
+h3 {
+    font-size: 1.4em;
+    margin-top: 1.3em;
 }
