--- a/css/main.css
+++ b/css/main.css
@@ -87,6 +87,20 @@ padding-right: 30px;*/
   margin: auto;
   margin-top: 15px;
 }
+.incircle.skill {
+  width: 18px;
+  height: 18px;
+  display: inline-block;
+  background-color: red;
+  margin: 0px 3.3px;
+}
+.incircle.skill.edu {
+  display: inline-block;
+  background-color: red;
+  margin: 0px 0px;
+  width: 21px;
+  height: 21px;
+}
 .circle.middle {
   width: 72px;
   height: 72px;
@@ -152,34 +166,28 @@ h3 {
     margin-top: 1.3em;
 }
 
-.productRate {
-background: url(../tmp/stars.png);
-width: 550px;
-height: 30px;
-float: none;
-margin: 22px;
-/*z-index: 11;*/
-}
-.productRate div {
-/*display: none;*/
-background: url(../tmp/full-stars.png);
-width: 0;
-height: 100%;
-}
 .Rate {
-background: url(../tmp/stars.png);
-width: 550px;
-height: 30px;
-float: none;
-margin: 22px;
-/*z-index: 11;*/
+/*background: url(../tmp/stars-opacity.png); */
+    width: 550px;
+    height: 30px;
+    float: none;
+    margin: 22px;
+    /* z-index: 11; */
 }
-.Rate div {
-/*display: none;*/
-background: url(../tmp/full-stars.png);
-width: 0;
-height: 100%;
-
+.Rate .star {
+    background: url(../tmp/stars-opacity.png);
+    background-size: 8.5% 100%;
+    /* position: relative; */
+    width: 0;
+    height: 100%;
+    float: left;
+}
+.fon {
+    background-color: red;
+    /* position: relative; */
+    width: 50%;
+    height: 100%;
+    top: 0px;
 }
 
 
